# 234_project

./: .cursorindexingignore  .env.example  .gitignore  README.md  findings.md  grpo_anti-sycophancy_training_4f8d369b.plan.md  pyproject.toml  requirements.txt  run_dpo.sh  run_dpo_eval.sh  run_gemma.sh  run_llama.sh
data/: download_legalbench.py  download_medqa.py  download_medquad.py  download_mmlu_professional_law.py  dpo_selfplay_gemma_nocot_train.jsonl  dpo_selfplay_gemma_nocot_train_question_ids.json  dpo_selfplay_gemma_nocot_val-v3.jsonl  dpo_selfplay_gemma_nocot_val.jsonl  dpo_selfplay_gemma_train.jsonl  dpo_selfplay_gemma_val.jsonl  dpo_selfplay_llama_nocot_train.jsonl  dpo_selfplay_llama_nocot_train_question_ids.json  dpo_selfplay_llama_nocot_val-v3.jsonl  dpo_selfplay_llama_nocot_val.jsonl  dpo_selfplay_llama_train.jsonl  dpo_selfplay_llama_val.jsonl  dpo_selfplay_qwen_nocot_train.jsonl  dpo_selfplay_qwen_nocot_train_question_ids-v3.json  dpo_selfplay_qwen_nocot_val.jsonl  dpo_selfplay_qwen_train.jsonl  dpo_selfplay_qwen_val.jsonl  dpo_val.jsonl  filtered_medqa.csv  filtered_medqa.jsonl  filtered_questions.csv  filtered_questions.jsonl  medqa.csv  mmlu_professional_law.csv  wrong_cots_Qwen_Qwen2.5-7B-Instruct_medical.jsonl  wrong_cots_google_gemma-2-9b-it_medical.jsonl  wrong_cots_google_gemma-3-4b-it_medical.jsonl  wrong_cots_meta-llama_Llama-3.1-8B-Instruct_legal.jsonl  wrong_cots_microsoft_Phi-4-mini-instruct_medical.jsonl  wrong_cots_together_ai_Qwen_Qwen2.5-7B-Instruct-Turbo_legal.jsonl  wrong_cots_together_ai_Qwen_Qwen2.5-7B-Instruct-Turbo_medical.jsonl  (+3 more)
(+113 files in other folders)
